# GSI-utils

.github/workflows/: gcc.yml  intel.yml
modulefiles/: gsiutils_container.intel.lua  gsiutils_gaea.intel.lua  gsiutils_gaeac5.intel.lua  gsiutils_gaeac6.intel.lua  gsiutils_jet.intel.lua  gsiutils_noaacloud.intel.lua  gsiutils_orion.intel.lua  gsiutils_wcoss2.intel.lua
src/EnKF/gfs/src/: CMakeLists.txt
src/EnKF/gfs/src/calc_increment_ncio.fd/: calc_increment_ncio.f90
src/EnKF/gfs/src/getsfcensmeanp.fd/: getsfcensmeanp.f90
src/EnKF/gfs/src/getsigensmeanp_smooth.fd/: getsigensmeanp_smooth_ncep.f90
src/EnKF/gfs/src/psop_ncio.fd/: CMakeLists.txt  psop_ncio.f90  psop_ncio_ensmean.f90  psop_ncio_mslp.f90  psop_ncio_plev.f90
src/EnKF/gfs/src/recentersigp.fd/: recentersigp.f90
src/EnKF/gfs/src/taperens.fd/: CMakeLists.txt  taperens.f90
src/netcdf_io/calc_analysis.fd/: inc2anl.f90  init_calc_analysis.f90  vars_calc_analysis.f90
src/netcdf_io/interp_inc.fd/: driver.F90
ush/: detect_machine.sh  module-setup.sh
